[package]
name = "kg-symbol"
version = "0.1.10"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Atomic strings in Rust.
"""
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/Kodegenix/kg-symbol"
edition = "2018"

[workspace]

[dependencies]
lazy_static = "1.3.0"
parking_lot = { version = "0.9.0", features = ["nightly"] }
heapsize = "0.4.2"
serde = "1.0.98"

[dev-dependencies]
serde_json = "1.0.40"
